--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 
 <!DOCTYPE html>
+
 <html>
+
   <head>
-    <title>TravelWorthy</title>
+
+    <title>Music Venue</title>
+
     <link rel="stylesheet" href="css/style.css" />
+
   </head>
+
   <body>
-    <h1>TravelWorthy</h1>
-    <div id="message"></div>
-    <div id="info"></div>
-    <div id="footer"></div>
+
+    <h1>Folk Room Club</h1>
+
+    <div id="info">
+
+      <h2>Best Music Venue</h2>
+
+      <div id="clubName"></div>
+
+      <div id="availability">
+
+        <p id="tickets"></p>
+
+        <p>tickets left</p>
+
+        <br/>
+
+        <h2>other concerts</h2>
+
+      <div id="concert1"></div>
+
+      <div id="concert2"></div>
+
+      </div>
+
+    </div>
+
     <script src="js/script.js"></script>
+
   </body>
+
 </html>
