--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@
   </head>
 
   <body>
+  <div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">Gallery</a>
+  <div class="dropdown">
+    <button class="dropbtn">Next Concerts
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">The Killers</a>
+      <a href="#">Imagine Dragons</a>
+      <a href="#">Billie Eilish</a>
+    </div>
+  </div>
+</div>
 
-    <h1>Folk Room Club</h1>
+    <h1>Foo Fighters</h1>
 
     <div id="info">
 
-      <h2>Best Music Venue</h2>
+      <h2>The Best Music Venue</h2>
 
       <div id="clubName"></div>
 
@@ -29,11 +43,7 @@
 
         <br/>
 
-        <h2>other concerts</h2>
-
-      <div id="concert1"></div>
-
-      <div id="concert2"></div>
+       
 
       </div>
 
